trunk/Archive2/df/c05522c3730da3/output
main.cpp:2:5: error: 'TEMP_SENSOR' does not name a type
     TEMP_SENSOR = 220,        // Датчик температуры          | °С
     ^
